; ModuleID = '/home/carl/AnghaBench/linux/security/extr_device_cgroup.c_set_access.c'
source_filename = "/home/carl/AnghaBench/linux/security/extr_device_cgroup.c_set_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ACCLEN = common dso_local global i32 0, align 4
@DEVCG_ACC_READ = common dso_local global i16 0, align 2
@DEVCG_ACC_WRITE = common dso_local global i16 0, align 2
@DEVCG_ACC_MKNOD = common dso_local global i16 0, align 2
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i16)* @set_access to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_access(i8* %0, i16 signext %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i16, align 2
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i16 %1, i16* %4, align 2
  store i32 0, i32* %5, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @ACCLEN, align 4
  %8 = call i32 @memset(i8* %6, i32 0, i32 %7)
  %9 = load i16, i16* %4, align 2
  %10 = sext i16 %9 to i32
  %11 = load i16, i16* @DEVCG_ACC_READ, align 2
  %12 = sext i16 %11 to i32
  %13 = and i32 %10, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %2
  %16 = load i8*, i8** %3, align 8
  %17 = load i32, i32* %5, align 4
  %18 = add nsw i32 %17, 1
  store i32 %18, i32* %5, align 4
  %19 = sext i32 %17 to i64
  %20 = getelementptr inbounds i8, i8* %16, i64 %19
  store i8 114, i8* %20, align 1
  br label %21

21:                                               ; preds = %15, %2
  %22 = load i16, i16* %4, align 2
  %23 = sext i16 %22 to i32
  %24 = load i16, i16* @DEVCG_ACC_WRITE, align 2
  %25 = sext i16 %24 to i32
  %26 = and i32 %23, %25
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %34

28:                                               ; preds = %21
  %29 = load i8*, i8** %3, align 8
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  %32 = sext i32 %30 to i64
  %33 = getelementptr inbounds i8, i8* %29, i64 %32
  store i8 119, i8* %33, align 1
  br label %34

34:                                               ; preds = %28, %21
  %35 = load i16, i16* %4, align 2
  %36 = sext i16 %35 to i32
  %37 = load i16, i16* @DEVCG_ACC_MKNOD, align 2
  %38 = sext i16 %37 to i32
  %39 = and i32 %36, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %47

41:                                               ; preds = %34
  %42 = load i8*, i8** %3, align 8
  %43 = load i32, i32* %5, align 4
  %44 = add nsw i32 %43, 1
  store i32 %44, i32* %5, align 4
  %45 = sext i32 %43 to i64
  %46 = getelementptr inbounds i8, i8* %42, i64 %45
  store i8 109, i8* %46, align 1
  br label %47

47:                                               ; preds = %41, %34
  ret void
}

declare dso_local i32 @memset(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
